--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev-linux": "export NODE_ENV=development && nodemon server.js"
+    "start-dev-linux": "export NODE_ENV=development && nodemon server.js",
+    "start-dev": "set NODE_ENV=development&nodemon server.js"
   },
   "author": "",
   "license": "ISC",
