File upload section added on AdminFileUpload

--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "joy12345",
+    "password": "ghuchu55",
     "database": "remuneration_app",
     "host": "localhost",
     "dialect": "mysql",
